--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -15,12 +15,15 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.10",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toggle": "^1.1.6",
     "@tailwindcss/vite": "^4.0.15",
     "bad-words": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.12.2",
     "firebase": "^11.5.0",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
