--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "emoji-picker-react": "^4.12.2",
     "firebase": "^11.5.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
