--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -28,6 +28,7 @@
     "firebase": "^11.5.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.483.0",
+    "nanoid": "^5.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
