--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -28,6 +28,7 @@
     "bad-words": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emblor": "^1.4.8",
     "emoji-picker-react": "^4.12.2",
     "firebase": "^11.5.0",
     "input-otp": "^1.4.2",
@@ -36,7 +37,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-hook-form": "^7.56.2",
+    "react-hook-form": "^7.57.0",
+    "react-multistep-form": "^1.2.0",
+    "react-multistep-forms": "^0.1.1",
     "react-router": "^7.5.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
