--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,10 +15,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
-        working-directory: ../chat-app
+        working-directory: ./chat-app
         run: npm install
       - name: Build application
-        working-directory: ../chat-app
+        working-directory: ./chat-app
         run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
