--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -14,7 +14,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-hover-card": "^1.1.11",
     "@radix-ui/react-label": "^2.1.4",
@@ -28,6 +28,7 @@
     "bad-words": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "emblor": "^1.4.8",
     "firebase": "^11.5.0",
     "input-otp": "^1.4.2",
